--- a/data_acquisition/requirements.txt
+++ b/data_acquisition/requirements.txt
@@ -1,3 +1,5 @@
+async-timeout==4.0.2
+bleak==0.20.1
 coloredlogs==15.0.1
 contourpy==1.0.7
 cycler==0.11.0
@@ -17,6 +19,10 @@ pandas==2.0.0
 Pillow==9.5.0
 protobuf==4.22.3
 Pygments==2.15.0
+pyobjc-core==9.1.1
+pyobjc-framework-Cocoa==9.1.1
+pyobjc-framework-CoreBluetooth==9.1.1
+pyobjc-framework-libdispatch==9.1.1
 pyparsing==3.0.9
 pyserial==3.5
 python-dateutil==2.8.2
@@ -25,5 +31,6 @@ rich==13.3.4
 six==1.16.0
 sympy==1.11.1
 tkthread==0.5.2
+tqdm==4.65.0
 tzdata==2023.3
 zipp==3.15.0
