Fix example config

--- a/data_acquisition/config.yaml.example
+++ b/data_acquisition/config.yaml.example
@@ -1,11 +1,11 @@
-MEASUREMENTS_PER_SAMPLE: 3337
+MEASUREMENTS_PER_SAMPLE: 3336
 IMU_CHARACTERISTIC_UUID: 19B10001-E8F2-537E-4F6C-D104768A1214
 TRIGGER_CHARACTERISTIC_UUID: 19B10002-E8F2-537E-4F6C-D104768A1214
 ID_PRESENT: True
 
 # bluetooth address (None for scan)
 #DEVICE_ADDRESS: 00C22CA1-4E9A-0DCA-D713-67BE50AB9603 #federico
-DEVICE_ADDRESS: 54A17D1F-A9C9-FD1E-6E48-6B8BF4F6FB5B #francesco
+#DEVICE_ADDRESS: 54A17D1F-A9C9-FD1E-6E48-6B8BF4F6FB5B #francesco
 
 ONNX_PATH: model.onnx
 #DATASET_PATH: /home
