Add inference reading in data_acquisition

--- a/data_acquisition/config.yaml.example
+++ b/data_acquisition/config.yaml.example
@@ -1,6 +1,7 @@
 MEASUREMENTS_PER_SAMPLE: 3336
 IMU_CHARACTERISTIC_UUID: 19B10001-E8F2-537E-4F6C-D104768A1214
 TRIGGER_CHARACTERISTIC_UUID: 19B10002-E8F2-537E-4F6C-D104768A1214
+INFERENCE_CHARACTERISTIC_UUID: 19B10003-E8F2-537E-4F6C-D104768A1214
 ID_PRESENT: True
 
 # bluetooth address (None for scan)
